Added functionality for uploading files to AWS S3 bucket

--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "log4js": "^6.9.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "odata": "^2.0.1",
+    "simple-oauth2": "^5.1.0",
+    "xml-js": "^1.6.11"
   }
 }
