--- a/env.example
+++ b/env.example
@@ -1,9 +1,14 @@
-AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
-AWS_S3_BUCKET_NAME=your_bucket_name
-MYSQL_HOST=localhost
-MYSQL_USER=your_username
-MYSQL_PASSWORD=your_password
-MYSQL_DATABASE=your_database
-TRESTLE_API_KEY=your_trestle_api_key
-TRESTLE_ENDPOINT=https://api.trestle.corelogic.com/your_endpoint
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET_NAME=
+MYSQL_HOST=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_PORT=
+MYSQL_DATABASE=
+
+CLIENT_ID=
+CLIENT_SECRET=
+TOKEN_HOST=
+TOKEN_PATH=
+API_URL=
