--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./app.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
+    "@aws-sdk/client-dynamodb": "^3.699.0",
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/lib-storage": "^3.700.0",
     "axios": "^1.7.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
